<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idScrlRegMenu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBox">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/idRegChRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/idTxRoom3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="128dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:paddingRight="64dp"
            android:layout_marginBottom="8dp"
            android:text="@string/NameRoom"
            app:layout_constraintBottom_toTopOf="@+id/idAddRoomName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/idRoomName3"
            android:layout_width="193dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/idTxBox2"
            app:layout_constraintEnd_toStartOf="@+id/idAddRoomName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idTxRoom3"
            app:layout_constraintVertical_bias="0.615" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/idAddRoomName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            app:backgroundTint="#CDDC39"
            app:fabSize="mini"
            app:layout_constraintBottom_toTopOf="@+id/idTxBox2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/idRoomName3"
            app:layout_constraintTop_toBottomOf="@+id/idTxRoom3"
            app:srcCompat="@drawable/ic_baseline_add_24" />

        <EditText
            android:id="@+id/idNameBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/idGenQRCode2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idTxBox2"
            android:labelFor="@+id/idNameBox"
            android:autofillHints="" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/idBack8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:onClick="goToBack"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/idChange"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idQRView3"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

        <ImageView
            android:id="@+id/idQRView3"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toTopOf="@+id/idBack8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idGenQRCode2"
            />

        <TextView
            android:id="@+id/idTxBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/NameBox"
            app:layout_constraintBottom_toTopOf="@+id/idNameBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idAddRoomName" />

        <TextView
            android:id="@+id/idTxBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/idStep3"
            app:layout_constraintBottom_toTopOf="@+id/idNameBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idGenQRCode2" />

        <Button
            android:id="@+id/idGenQRCode2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/QRCodeGen"
            android:textColor="#ffffff"
            android:theme="@style/Button1Style"
            android:onClick="generateQRCOde"
            app:layout_constraintBottom_toTopOf="@+id/idQRView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idTxBox3" />

        <Button
            android:id="@+id/idChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:text="@string/Save"
            android:textColor="#ffffff"
            android:theme="@style/Button1Style"
            android:onClick="saveInfoBox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/idBack8"
            app:layout_constraintTop_toBottomOf="@+id/idQRView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>